[gd_scene load_steps=2 format=3 uid="uid://ba3vq6mh4riiq"]

[ext_resource type="Script" path="res://Scene/RouteSelectionScene/Track/track.gd" id="1_2htug"]

[node name="Track" type="Node2D"]
script = ExtResource("1_2htug")

[node name="TrackLine" type="Line2D" parent="."]

[node name="TrackArea" type="Area2D" parent="."]

[node name="TrackCollisionShape" type="CollisionShape2D" parent="TrackArea"]

[node name="TrackArrow" type="Polygon2D" parent="."]
polygon = PackedVector2Array(10, 0, -6, -13, -10, -9, 0, 0, -10, 9, -6, 13)

[connection signal="input_event" from="TrackArea" to="." method="_on_track_area_input_event"]
